--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,8 @@ spring.datasource.password=123456
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+
+# App Properties
+store.app.jwtCookieName= store
+store.app.jwtSecret= storeSecretKey
+store.app.jwtExpirationMs= 86400000
